[package]
name = "ImageApiRs"
version = "0.1.0"
authors = ["ArsileLuci <arsile410@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.106"
actix-multipart = "0.2.0"
reqwest = "0.10.4"
serde_derive = "1.0.106"
base64 = "0.12.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
libsqlite3-sys = { version = "0.17.1", features = ["bundled"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.4"
image = "0.23.3"